--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,7 +39,8 @@
             android:layout_height="match_parent">
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvProfilePicture"
-                android:layout_height="80dp"
+                android:layout_height="60dp"
+                android:layout_width="60dp"
                 app:cardCornerRadius="40dp"
                 android:elevation="0dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -47,8 +48,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_width="80dp">
+                app:layout_constraintLeft_toLeftOf="parent">
                 <ImageView
                     android:id="@+id/ivProfilePicture"
                     android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 app:layout_constraintLeft_toRightOf="@+id/cvProfilePicture"
                 app:layout_constraintRight_toRightOf="parent"
                 android:text="Name"/>
@@ -71,7 +71,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Email"
                 android:layout_marginLeft="20dp"
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:textStyle="italic"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvUserName"
