--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,13 +40,13 @@
                     android:layout_marginTop="50dp"
                     android:text="Pick Up where you left off"
                     android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView"
+                    app:layout_constraintBottom_toTopOf="@+id/tvCurrentLessonName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/tvCurrentLessonName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
@@ -105,44 +105,63 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvExampleImage"
+                android:layout_width="48dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="15dp"
+                android:elevation="0dp"
+                app:cardCornerRadius="24dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_height="48dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:padding="4dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_code_example"/>
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tvTestYourLearning"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:gravity="center"
                 android:layout_marginTop="15dp"
                 android:text="Test Your Learning"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/tvRandomExample"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/cvExampleImage"
+                 />
 
             <TextView
                 android:id="@+id/tvRandomExample"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_marginLeft="20dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:gravity="center"
+                android:gravity="center_vertical"
+                app:layout_constraintLeft_toRightOf="@+id/cvExampleImage"
                 android:text="Try a random example"
-                app:layout_constraintBottom_toTopOf="@+id/bToRandomExample"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/tvTestYourLearning" />
 
             <Button
                 android:id="@+id/bToRandomExample"
                 android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:textAllCaps="false"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginBottom="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:minHeight="55dp"
                 android:text="See Example"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tvRandomExample" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
