--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,9 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Small and Precise Chapters"
+        android:gravity="center_vertical"
+        android:drawableLeft="@drawable/ic_star"
+        android:drawablePadding="10dp"
         android:textSize="25sp"
         android:layout_marginTop="200dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -22,9 +25,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Practice Examples"
+        android:drawableLeft="@drawable/ic_star"
+        android:drawablePadding="10dp"
         android:textSize="25sp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintTop_toBottomOf="@id/tvSmallChapters"/>
     <TextView
         android:id="@+id/tvFavourites"
@@ -32,8 +37,10 @@
         android:layout_height="wrap_content"
         android:text="Mark Chapters as Favourites"
         android:textSize="25sp"
+        android:drawableLeft="@drawable/ic_star"
+        android:drawablePadding="10dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintTop_toBottomOf="@id/tvExamples"/>
 
     <androidx.cardview.widget.CardView
@@ -75,13 +82,14 @@
                         android:layout_width="0dp"
                         android:textColor="@color/white"
                         android:layout_height="match_parent"
-                        app:layout_constraintLeft_toRightOf="@+id/ivGoogleIcon"
+                        app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                        android:gravity="center_vertical"
+                        android:gravity="center"
+                        android:letterSpacing="0.02"
+                        app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginLeft="25dp"
                         android:text="Continue with Google"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
