--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -52,25 +52,26 @@
 
             <ImageView
                 android:id="@+id/ivShare"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:padding="18dp"
                 android:contentDescription="Share"
                 android:clickable="true"
                 android:src="@drawable/ic_outline_share_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginLeft="25dp"
-                android:padding="4dp"
+
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/ivFavourite"
                 android:clickable="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:padding="18dp"
+                android:layout_marginLeft="10dp"
                 android:contentDescription="Favourite"
-                android:layout_marginLeft="25dp"
-                android:padding="4dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/ivShare"
