--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -7,7 +7,7 @@
     tools:context=".ExampleActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvChapterText"
+        android:id="@+id/tvExampleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Example Text"
@@ -26,15 +26,16 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
     <TextView
+        android:id="@+id/tvCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="20sp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvChapterText"
+        app:layout_constraintTop_toBottomOf="@+id/tvExampleText"
         android:hint="Example Code"/>
     <androidx.cardview.widget.CardView
         android:id="@+id/cvBottomItems"
