--- a/app/src/main/res/layout/fragment_examples.xml
+++ b/app/src/main/res/layout/fragment_examples.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ExamplesFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvExamples"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Examples"
-        android:textSize="50sp"/>
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
