--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#f2f6f7"
+    android:fillViewport="true"
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
@@ -246,45 +247,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:id="@+id/ivWrite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_write"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cvRandomExample" />
-
-        <TextView
-            android:id="@+id/tvWrite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/milliard_book"
-            android:text="Contribute by WRITING"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivWrite" />
-
-        <TextView
-            android:id="@+id/tvContribute"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginRight="20dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/contribute_background"
-            android:clickable="true"
-            android:fontFamily="@font/milliard_semibold"
-            android:gravity="center"
-            android:letterSpacing="0.1"
-            android:text="Contribute"
-            android:textColor="@color/primaryColor"
-            android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvWrite" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
