--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginRight="20dp"
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/milliard_semibold"
@@ -108,16 +108,19 @@
                 android:textSize="25sp"
                 app:layout_constraintTop_toBottomOf="@id/tvAdFree"
                 app:drawableLeftCompat="@drawable/ic_star" />
-            <ImageView
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_made_with_love"
-                app:layout_constraintTop_toBottomOf="@+id/tvFrequentUpdate"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                android:text=". . ."
+                app:layout_constraintTop_toBottomOf="@id/tvFrequentUpdate"
+                android:layout_marginLeft="20dp"
+                android:textSize="50sp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textColor="#2d3e50"
+                android:layout_marginRight="20dp"/>
+
+
 
 
 
