--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -12,60 +12,59 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="none"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cvBottomItems">
+        app:layout_constraintBottom_toTopOf="@id/cvBottomItems"
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/tvTitle"
-                android:fontFamily="@font/milliard_semibold"
-                android:textColor="#2d3e50"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="20dp"
+                android:layout_margin="25dp"
+                android:fontFamily="@font/milliard_semibold"
                 android:hint="Chapter Title"
-                android:textSize="26sp"
+                android:textColor="#2d3e50"
+                android:textSize="32sp"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvChapterText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
+                android:layout_margin="25dp"
+                android:layout_marginTop="35dp"
                 android:fontFamily="@font/milliard_book"
-                android:layout_marginRight="20dp"
-                android:hint="Chapter Text"
+                android:hint="Chapter Text is loading."
+                android:lineSpacingExtra="12dp"
+                android:textColor="@color/grey_text"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_margin="25dp"
                 android:background="@drawable/white_corner_background"
-                android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@id/tvChapterText">
+
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fillViewport="true"
                     android:padding="10dp"
-                    android:scrollbars="none"
-                    android:fillViewport="true">
+                    android:scrollbars="none">
+
                     <TextView
                         android:id="@+id/tvCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Example Code"
                         android:fontFamily="@font/consolas"
+                        android:hint="Example Code"
                         android:scrollHorizontally="true"
-                        android:textSize="20sp"
-                        />
+                        android:textSize="20sp" />
                 </HorizontalScrollView>
 
             </LinearLayout>
@@ -73,11 +72,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
     </ScrollView>
-
 
 
     <androidx.cardview.widget.CardView
@@ -122,15 +117,15 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/bToNextChapter"
-                android:fontFamily="@font/milliard_book"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginRight="20dp"
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/milliard_book"
                 android:text="Next"
+                android:textAllCaps="false"
                 android:textColor="@color/primaryColor"
                 android:textSize="16sp"
-                android:background="@drawable/button_background"
-                android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
