--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -20,59 +20,54 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:textColor="#2d3e50"
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_margin="25dp"
                 android:fontFamily="@font/milliard_semibold"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="20dp"
                 android:hint="Example Title"
-                android:padding="10dp"
-                android:textSize="26sp"
+                android:textColor="#2d3e50"
+                android:textSize="32sp"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvExampleText"
-                android:fontFamily="@font/milliard_book"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_margin="25dp"
+                android:layout_marginTop="35dp"
+                android:fontFamily="@font/milliard_book"
+                android:lineSpacingExtra="12dp"
+                android:text="Example text is loading."
                 android:textColor="@color/grey_text"
-                android:hint="Example Text"
-                android:padding="10dp"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_margin="25dp"
                 android:background="@drawable/white_corner_background"
-                android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@id/tvExampleText">
+
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fillViewport="true"
                     android:padding="10dp"
-                    android:scrollbars="none"
-                    android:fillViewport="true">
+                    android:scrollbars="none">
+
                     <TextView
                         android:id="@+id/tvCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Chapter Code"
                         android:fontFamily="@font/consolas"
+                        android:hint="Chapter Code"
                         android:scrollHorizontally="true"
-                        android:textSize="20sp"
-                        />
+                        android:textSize="20sp" />
                 </HorizontalScrollView>
 
             </LinearLayout>
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -126,12 +121,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginRight="20dp"
-                android:textSize="16sp"
-                android:textColor="@color/primaryColor"
-                android:text="Next"
-                android:fontFamily="@font/milliard_book"
                 android:background="@drawable/button_background"
+                android:fontFamily="@font/milliard_book"
+                android:text="Next"
                 android:textAllCaps="false"
+                android:textColor="@color/primaryColor"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
