--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="none"
+        android:paddingBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/cvBottomItems"
         app:layout_constraintTop_toTopOf="parent">
 
