--- a/app/src/main/res/drawable/splash_image.xml
+++ b/app/src/main/res/drawable/splash_image.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/white"/>
-    <item
-        android:drawable="@drawable/ic_internal_logo"
+    <item android:drawable="@drawable/ic_logoc"
         android:gravity="center"/>
 </layer-list>
